--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: XiMao Blog
+title: 熙猫🐱 Blog
 SEOTitle: 熙猫的博客 | XiMao Blog
 header-img: img/home-bg.jpg
 email: liuxikoko@gmail.com
